<resources>
    <string name="app_name">Go</string>
    <string name="log_in">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Start</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="product_logo">Product Logo</string>
    <string name="personal_details">Personal Details</string>
    <string name="username_password_ph">Enter Username and Password</string>
    <string name="main_activity_ph">Forex trading shouldn’t be hard. Set your rates create a bid and start trading today.</string>
    <string name="forgot_password">Forgot Pin?</string>
    <string name="next">Next</string>
    <string name="email">Email</string>
    <string name="country">Country</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="choose_country_ph">Choose your country</string>
    <string name="personal_details_ph">What is your name?</string>
    <string name="country_info_ph">What country are you in?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_email_address_ph">What is your email address?</string>
    <string name="create_a_username">Create a username</string>
    <string name="username_text_ph">This will be your trading name within the app, you can always change, it in your profile.</string>
    <string name="create_a_password">Create a Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="input_a_password">Input a password</string>
    <string name="password_helper_ph">Your password should be a minimum of 6 characters</string>
    <string name="nigerian"> Nigerian</string>
    <string name="what_is_your_phone_number">What is your Phone Number?</string>
    <string name="country_information_ph">Your country information helps \n us verify you.</string>
    <string name="phone">Phone</string>
...
    <string name="mm_yy">MM/YY</string>
    <string name="cvv">CVV</string>
    <string name="enter_card_details">Enter Card Details</string>
    <string name="set_pin">Create a PIN</string>
    <string name="pin_info">To protect your account.</string>
    <!--<string name="pin">Pin</string>-->
    <string name="account_setup_completed">Account Setup Completed!</string>
    <string name="fund_wallet_text">Fund wallet and start \ntrading in real time</string>
    <string name="fund_wallet">Fund Wallet</string>
    <string name="skip">Skip</string>
    <string name="backdrop">backdrop</string>
    <string name="profile_image">Profile Image</string>
    <string name="profile_name_ph">Eleanor Ezimah</string>
...
